<resources>
    <string name="app_name">Golaso</string>
    <string name="icon_fav">Favoritos</string>
    <string name="icon_clasificacion">Clasificación</string>
    <string name="icon_perfil">Perfil</string>
    <string name="icon_partidos">Partidos</string>
    <string name="icon_buscar">Buscar</string>
    <string name="title_search">Búsqueda</string>
    <string name="title_fav">Favoritos</string>
    <string name="title_profile">Perfil</string>
    <string name="title_clasificaction">Clasificación</string>
    <string name="teams">Equipos</string>
    <string name="players">Jugadores</string>
    <string name="results">Resultados</string>
    <string name="TopScorers">Goleadores</string>
    <string name="coach">Entrenador:</string>
    <string name="rank">Posición:</string>
    <string name="team">Equipo:</string>
    <string name="stadium">Estadio:</string>
    <string name="accesPos">Posición:</string>
    <string name="team_details">Detalles del equipo</string>
    <string name="statistics">Estadísticas</string>
    <string name="gc">Goles en contra:</string>
    <string name="gf">Goles a favor:</string>
    <string name="pe">Empates:</string>
    <string name="pg">Victorias:</string>
    <string name="pj">Partidos jugados:</string>
    <string name="pp">Derrotas:</string>
    <string name="pt">Puntos:</string>
    <string name="submit">Publicar</string>
    <string name="cancel">Cancelar</string>
    <string name="commentTittle">Nuevo comentario</string>
    <string name="share">Compartir</string>
    <string name="myFavs">Mis favoritos</string>
    <string name="sTeamList">Buscar equipo</string>
    <string name="sPlayerList">Buscar jugador</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="playerPos">Posición:</string>
    <string name="player">Jugador</string>
    <string name="Team">Equipo</string>
    <string name="SearchPlayer">Buscar jugador</string>
    <string name="SearchTeam">Buscar equipo</string>
    <string name="PlayerInfo">Información del jugador</string>
    <string name="PlayerPos">Posición:</string>
    <string name="PlayerG">Goles:</string>
    <string name="PlayerA">Asistencias:</string>
    <string name="PlayerAge">Edad:</string>
    <string name="PlayerYear">Año de nacimiento:</string>
    <string name="PlayerPJ">Partidos jugados:</string>
    <string name="PlayerCountry">País:</string>
    <string name="ShareTeam">Compartir equipo</string>
    <string name="action_settings">Ajustes</string>
    <string name="settings_theme_key">Tema</string>
    <string name="settings_fragment_tab">ajustes_fragmento_tab</string>
    <string name="settings_theme_title">Elegir tema</string>
    <string name="settings_theme_dialog_title">Elegir tema</string>
    <string name="settings_toolbar">Ajustes</string>
    <string name="icon_login">Iniciar sesión</string>
    <string name="icon_modificar_perfil">Modificar Perfil</string>
    <string name="edit_user">Usuario</string>
    <string name="edit_password">Contrasena</string>
</resources>